<resources>
    <string name="app_name">Bicycle-Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_informations">Informations</string>
    <string name="rear_cog">Cog</string>
    <string name="set_cog">Set cog</string>
    <string name="chainring">Chainring</string>
    <string name="set_chainring">Set chainring</string>
    <string name="set_speed">Set speed</string>
    <string name="gear_ratio">Gear ratio</string>
    <string name="skid_patch">Skid patch</string>
    <string name="calculate_btn">Calculate</string>
    <string name="cadence">Cadence</string>
    <string name="wheel_size">Wheel size</string>
    <string name="set_cadence">Set cadence</string>
    <string name="speed">Speed</string>
    <string name="kph">KPH</string>
    <string name="speed_from_cadence">Speed</string>
    <string name="rotate_per_minute">rotate/minute</string>
    <string name="cadence_information">is the number of revolutions of the crank per minute. </string>
    <string name="skid_pathes">Skid Pathes</string>
    <string name="skid_pathes_information">it is skid (stop wheel) on the same section of the tire</string>
    <string name="title_activity_fixed_gear">FixedGearActivity</string>
    <string name="set_name">Set name</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_bicycle">Add bicycle</string>
    <string name="create_bicycle">Create bicycle</string>
    <string name="title_activity_bicycle_creator">BicycleCreator</string>
    <string name="title_activity_garage">Garage</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="error_chainring">Fill chainring</string>
    <string name="error_cog">Fill cog</string>
    <string name="error_cadence">Fill cadence</string>
    <string name="error_name">Fill name</string>

    <string name="nav_item_fixed_calculator">Fixed Calculator</string>
    <string name="nav_item_bicycle_creator">Bicycle Creator</string>
    <string name="nav_item_garage">Garage</string>

    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bicycle_creator">Bicycle creator</string>
    <string name="garage">Garage</string>
    <string name="title_activity_bicycle_parameters">BicycleParameters</string>
    <string-array name="wheel_sizes">
        <item>700x23c</item>
        <item>700x18c</item>
        <item>700x20c</item>
        <item>700x25c</item>
        <item>700x28c</item>
        <item>700x32c</item>
        <item>700x35c</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
</resources>


