<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fixed_calc"
            android:checked="false"
            android:icon="@drawable/ic_nav_calc24dp"
            android:title="@string/nav_item_fixed_calculator"/>
        <item
            android:id="@+id/nav_garage"
            android:checked="false"
            android:icon="@drawable/ic_nav_calc24dp"
            android:title="@string/nav_item_garage"/>
        <item
            android:id="@+id/nav_bicycle_creator"
            android:checked="false"
            android:icon="@drawable/ic_nav_calc24dp"
            android:title="@string/nav_item_bicycle_creator"/>
        </group>
</menu>