<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sebastian.cadence.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/chainring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chainring"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/set_chainring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chainring"
        android:hint="@string/set_chainring"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/cog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_chainring"
        android:text="@string/rear_cog"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/set_cog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cog"
        android:hint="@string/set_cog"
        android:inputType="number" />

    <TextView
        android:id="@+id/gear_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_cog"
        android:layout_marginTop="20dp"
        android:text="@string/gear_ratio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/show_gear_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gear_ratio"
        android:layout_alignStart="@+id/gear_ratio"
        android:layout_below="@+id/gear_ratio"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/skid_patch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_cog"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/gear_ratio"
        android:text="@string/skid_patch"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/show_skid_patch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skid_patch"
        android:layout_alignStart="@+id/skid_patch"
        android:layout_below="@id/skid_patch"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/show_skid_patch_for_ambidextrous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skid_patch"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/show_skid_patch"
        android:text="or" />

    <TextView
        android:id="@+id/show_skid_patch_number_for_ambidextrous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skid_patch"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/show_skid_patch_for_ambidextrous" />

    <TextView
        android:id="@+id/ambidextrous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skid_patch"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/show_skid_patch_number_for_ambidextrous"
        android:text="(ambidextrous)" />

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_skid_patch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="calculate"
        android:text="@string/calculate_btn" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_cog"
        android:src="@drawable/cog"
        android:layout_toRightOf="@id/cog"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/set_chainring"/>
</RelativeLayout>

