<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebastian.bicycle_calculator.FixedCalculator">

    <TextView
        android:id="@+id/chainring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chainring"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/set_chainring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chainring"
        android:hint="@string/set_chainring"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/cog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_chainring"
        android:text="@string/rear_cog"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/set_cog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cog"
        android:hint="@string/set_cog"
        android:imeOptions="actionDone"
        android:inputType="number" />


    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_cog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="calculate"
        android:text="@string/calculate_btn" />

    <TextView
        android:id="@+id/cadence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_cog"
        android:layout_marginTop="20dp"
        android:text="@string/cadence"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/show_set_cadence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadence"
        android:hint="@string/set_cadence"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/gear_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_set_cadence"
        android:layout_marginTop="20dp"
        android:text="@string/gear_ratio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/show_gear_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gear_ratio"
        android:layout_alignStart="@+id/gear_ratio"
        android:layout_below="@+id/gear_ratio"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/skid_patch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_set_cadence"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/gear_ratio"
        android:text="@string/skid_patch"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/show_skid_patch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skid_patch"
        android:layout_alignStart="@+id/skid_patch"
        android:layout_below="@id/skid_patch"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/show_skid_patch_for_ambidextrous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skid_patch"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/show_skid_patch"
        android:text="or" />

    <TextView
        android:id="@+id/show_skid_patch_number_for_ambidextrous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skid_patch"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/show_skid_patch_for_ambidextrous" />

    <TextView
        android:id="@+id/ambidextrous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skid_patch"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/show_skid_patch_number_for_ambidextrous"
        android:text="(ambidextrous)" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_gear_ratio"
        android:layout_marginTop="20dp"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/show_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speed"
        android:layout_below="@id/speed"
        android:text="8" />

    <TextView
        android:id="@+id/kph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/show_speed"
        android:text="@string/kph" />

    <ImageView
        android:id="@+id/image_cog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_chainring"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/cog"
        android:src="@drawable/cog" />


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/show_speed"
        android:layout_marginTop="30dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/cadence" />

            <TextView
                android:padding="3dip"
                android:text="50" />

            <TextView
                android:padding="3dip"
                android:text="60" />

            <TextView
                android:padding="3dip"
                android:text="70" />

            <TextView
                android:padding="3dip"
                android:text="80" />

            <TextView
                android:padding="3dip"
                android:text="90" />

            <TextView
                android:padding="3dip"
                android:text="100" />

            <TextView
                android:padding="3dip"
                android:text="110" />

            <TextView
                android:padding="3dip"
                android:text="120" />

            <TextView
                android:padding="3dip"
                android:text="130" />

            <TextView
                android:padding="3dip"
                android:text="140" />

            <TextView
                android:padding="3dip"
                android:text="150" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/speed_50"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_60"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_70"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_80"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_90"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_100"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_110"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_120"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_130"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_140"
                android:padding="3dip" />

            <TextView
                android:id="@+id/speed_150"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
    <ListView
        android:id="@+id/navList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"
        app:headerLayout="@layout/header"
       />
    </android.support.v4.widget.DrawerLayout>

