<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".Activity.FixedCalculator"
        tools:showIn="@layout/activity_fixed_calculator"
        android:orientation="vertical">




    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_chainring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/set_chainring"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/set_chainring"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_chainring">

            <EditText
                android:id="@+id/set_cog"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cog"
                android:hint="@string/set_cog"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_cog"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="calculate"
            android:text="@string/calculate_btn" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cadence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_cog">

            <EditText
                android:id="@+id/set_cadence"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:hint="@string/set_cadence"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/gear_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_cadence"
            android:layout_marginTop="20dp"
            android:text="@string/gear_ratio"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/show_gear_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/gear_ratio"
            android:layout_alignStart="@+id/gear_ratio"
            android:layout_below="@+id/gear_ratio"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/skid_patch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_cadence"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/gear_ratio"
            android:text="@string/skid_patch"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/show_skid_patch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/skid_patch"
            android:layout_alignStart="@+id/skid_patch"
            android:layout_below="@id/skid_patch"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/show_skid_patch_for_ambidextrous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skid_patch"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/show_skid_patch"
            android:text="or" />

        <TextView
            android:id="@+id/show_skid_patch_value_for_ambidextrous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skid_patch"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/show_skid_patch_for_ambidextrous" />

        <TextView
            android:id="@+id/ambidextrous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skid_patch"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/show_skid_patch_value_for_ambidextrous"
            android:text="(ambidextrous)" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_gear_ratio"
            android:layout_marginTop="20dp"
            android:text="@string/speed"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/show_cadence_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/speed"
            android:layout_below="@id/speed"
            android:text="8" />

        <TextView
            android:id="@+id/kph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speed"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/show_cadence_speed"
            android:text="@string/kph" />

        <ImageView
            android:id="@+id/image_cog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/cog"
            android:layout_alignTop="@+id/input_layout_chainring"
            android:layout_alignStart="@+id/ambidextrous" />


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/show_cadence_speed"
            android:layout_marginTop="30dp"
            android:stretchColumns="7"
            >

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/cadence" />

                <TextView
                    android:padding="3dip"
                    android:text="50" />

                <TextView
                    android:padding="3dip"
                    android:text="60" />

                <TextView
                    android:padding="3dip"
                    android:text="70" />

                <TextView
                    android:padding="3dip"
                    android:text="80" />

                <TextView
                    android:padding="3dip"
                    android:text="90" />

                <TextView
                    android:padding="3dip"
                    android:text="100" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:layout_width="wrap_content"
                    android:text="@string/speed" />

                <TextView
                    android:id="@+id/speed_50"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/speed_60"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/speed_70"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/speed_80"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/speed_90"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/speed_100"
                    android:padding="3dip" />


            </TableRow>
        </TableLayout>






    </RelativeLayout>




